# api-gen

./: .gitignore  Cargo.toml  PLAN.md  STRUCTURE.md  TESTS.md  TODO.md  store.json
crates/: Cargo.toml
crates/api-key/: Cargo.toml
crates/api-key/src/: error.rs  generation.rs  lib.rs  rate_limit.rs  storage.rs  validation.rs
crates/api-key/tests/: generation.rs  storage.rs
crates/api-key/tests/common/: mod.rs
crates/src/: audit.rs  error.rs  generation.rs  hashing.rs  health.rs  lib.rs  logging.rs  metrics.rs  rate_limit.rs  request.rs  rotation.rs  storage.rs  validation.rs
crates/src/tests/: audit.rs  error.rs  generation.rs  hashing.rs  health.rs  health_endpoint.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  request.rs  rotation.rs  storage.rs  validation.rs
crates/src/tests/common/: mod.rs
src/: api_key.rs  generation.rs  hashing.rs  main.rs
