[workspace]
members = [
    "crates/api-key"
]
resolver = "2"

[package]
name = "api_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
rand = "0.8"
sha2 = "0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tronch-api-key = { path = "crates/api-key" }
