[package]
name = "tronch"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
base64 = "0.21"
argon2 = { version = "0.5", features = ["password-hash"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] } 